[gd_scene load_steps=4 format=3 uid="uid://b4nlkmwrj40g2"]

[ext_resource type="Script" uid="uid://cwpe6tpd7p6mh" path="res://scripts/workday_new/event_slot_item.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cdja3eosvd0mn" path="res://assets/font/LEEEAFHEI-REGULAR.TTF" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(1, 1, 1, 0.1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="EventSlotItem" type="Control"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 160.0
script = ExtResource("1_script")

[node name="SlotButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
flat = true

[node name="ContentContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="LeftSection" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 5

[node name="SlotDescriptionLabel" type="Label" parent="ContentContainer/LeftSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 25
text = "卡槽描述"
autowrap_mode = 3

[node name="AllowedTypesLabel" type="Label" parent="ContentContainer/LeftSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "允许: 角色卡、情报卡"
autowrap_mode = 3

[node name="StatusLabel" type="Label" parent="ContentContainer/LeftSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "状态: 空"

[node name="RightSection" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 2

[node name="CardPreview" type="Control" parent="ContentContainer/RightSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EmptySlotIcon" type="Label" parent="ContentContainer/RightSection/CardPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 60
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardImage" type="TextureRect" parent="ContentContainer/RightSection/CardPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CharacterCardContainer" type="Control" parent="ContentContainer/RightSection/CardPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RemoveButton" type="Button" parent="ContentContainer/RightSection/CardPreview"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 14
text = "❌"
flat = true

[node name="HighlightBorder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.8, 0, 0.3)
